# cocoyolo

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cocoyolo/: __init__.py  annotations.py  cli.py  coco_to_yolo.py  dataset.py  dataset_yolo.py  geometry.py  image_utils.py  io_utils.py  yolo_to_coco.py
